added mobile friendly

--- a/Components/BaseCard.razor
+++ b/Components/BaseCard.razor
@@ -51,7 +51,7 @@
     </div>
 
     <div class="footer">
-        <button class="btn btn-danger btn-dismiss" @onclick="@OnDismiss">Dismiss</button>
+        <button class="btn btn-dismiss" @onclick="@OnDismiss">Dismiss</button>
     </div>
 
 
