--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -6,7 +6,7 @@
 
 @code {
     [Inject]
-    private IBaseCardService baseCardService { get; set; }
+    private IBaseCardService baseCardService { get; set; } = null!;
 }
 
 
