--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -5,6 +5,7 @@
     --data-orange: #F35625;
     --data-black: #3F4254;
     --data-red: #FF4848;
+    --data-red-dark: #eb3d3d;
     --data-blue-light: #F4F7FC;
 }
 
